[gd_scene load_steps=73 format=3 uid="uid://crjtftvmkahqx"]

[ext_resource type="PackedScene" uid="uid://bb8fvvxo2nhq1" path="res://Scenes/Objects/Characters/character.tscn" id="1_regtg"]
[ext_resource type="Script" path="res://Scenes/Objects/Characters/Saul/saul.gd" id="2_rhth6"]
[ext_resource type="Texture2D" uid="uid://dq2whk7itu8n4" path="res://Resources/Textures/PLACEHOLDERS/hitcircle.png" id="3_hc6mq"]
[ext_resource type="PackedScene" uid="uid://yxxgx3h82w35" path="res://Scenes/Objects/Characters/Saul/dash_trail.tscn" id="4_6x0l7"]
[ext_resource type="Texture2D" uid="uid://cdhv5eao2yy7a" path="res://Resources/Textures/SaulSprites/dashsmear (AddinSachen).png" id="5_6q34m"]
[ext_resource type="PackedScene" uid="uid://ckw12igh1dbr4" path="res://Scenes/Objects/Characters/Saul/dash_trail2.tscn" id="6_l2rib"]
[ext_resource type="Texture2D" uid="uid://buql8wtc73qsp" path="res://Resources/Textures/SaulSprites/WallHang_Extra (AddinSachen).png" id="6_o7kle"]
[ext_resource type="Texture2D" uid="uid://cfefmmpanysh2" path="res://Resources/Textures/SaulSprites/Dash (AddinSachen).png" id="7_1d3qm"]
[ext_resource type="Texture2D" uid="uid://wfolyvshid67" path="res://Resources/Textures/SaulSprites/JumpMID (AddinSachen).png" id="7_7scej"]
[ext_resource type="Texture2D" uid="uid://0r7bmjic63s5" path="res://Resources/Textures/SaulSprites/Idle (AddinSachen).png" id="8_njfhj"]
[ext_resource type="Texture2D" uid="uid://5do3awtnco2e" path="res://Resources/Textures/SaulSprites/JumpAnticipation (AddinSachen).png" id="9_k3qw0"]
[ext_resource type="Texture2D" uid="uid://cxj30n7000v7j" path="res://Resources/Textures/SaulSprites/JumpUP (AddinSachen).png" id="10_5c87x"]
[ext_resource type="Texture2D" uid="uid://celucivfiof5n" path="res://Resources/Textures/SaulSprites/JumpEnd (AddinSachen).png" id="11_y6knk"]
[ext_resource type="Texture2D" uid="uid://cj43l3mynic37" path="res://Resources/Textures/SaulSprites/Running (AddinSachen).png" id="12_3sl4j"]
[ext_resource type="Texture2D" uid="uid://drod5aixx84ru" path="res://Resources/Textures/SaulSprites/Skidding (AddinSachen).png" id="13_c1jwc"]
[ext_resource type="Texture2D" uid="uid://fw1h5po3wxnw" path="res://Resources/Textures/SaulSprites/WallSlide (AddinSachen).png" id="14_rilo2"]
[ext_resource type="Texture2D" uid="uid://me1hjfcqsjid" path="res://Resources/Textures/SaulSprites/Walking (AddinSachen).png" id="15_7esle"]
[ext_resource type="Texture2D" uid="uid://djjnknhd3px7v" path="res://Resources/Textures/SaulSprites/Wall_Jump (AddinSachen)-Sheet.png" id="16_76hmv"]
[ext_resource type="PackedScene" uid="uid://d4hvse6k4r8rh" path="res://Scenes/Objects/debug_vars_visualizer.tscn" id="17_q1cbf"]
[ext_resource type="PackedScene" uid="uid://l5aj8nwgghqe" path="res://Scenes/Objects/Characters/Saul/dust_trail.tscn" id="18_2oby4"]
[ext_resource type="AudioStream" uid="uid://dpg46pasbhqyu" path="res://Resources/Audio/SFX/jump1.wav" id="19_yklgd"]
[ext_resource type="AudioStream" uid="uid://cqinx1if47psh" path="res://Resources/Audio/SFX/jump2.wav" id="20_dgphi"]
[ext_resource type="AudioStream" uid="uid://bxe2502g4y2iv" path="res://Resources/Audio/SFX/dash.wav" id="21_3ncd7"]
[ext_resource type="AudioStream" uid="uid://mkt04tcqr0em" path="res://Resources/Audio/SFX/hit_wall.wav" id="22_tm1ie"]
[ext_resource type="AudioStream" uid="uid://ck8td3x687ool" path="res://Resources/Audio/SFX/attack2.wav" id="24_82yp3"]
[ext_resource type="AudioStream" uid="uid://bo3dmd83ceyvo" path="res://Resources/Audio/SFX/attack1.wav" id="24_ur4w1"]
[ext_resource type="AudioStream" uid="uid://dftb7ej7uoibk" path="res://Resources/Audio/SFX/damaged.wav" id="26_lxbau"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ypg7h"]
size = Vector2(13, 30)

[sub_resource type="CircleShape2D" id="CircleShape2D_jtpw0"]

[sub_resource type="Curve" id="Curve_thmgi"]
_data = [Vector2(0, 0.728302), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_euce1"]
atlas = ExtResource("6_o7kle")
region = Rect2(16, 16, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5qkt"]
atlas = ExtResource("7_1d3qm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_78ayj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qjd3o"]
atlas = SubResource("CompressedTexture2D_78ayj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcwdh"]
atlas = SubResource("CompressedTexture2D_78ayj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5hpc"]
atlas = ExtResource("7_7scej")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyasq"]
atlas = ExtResource("8_njfhj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuuwy"]
atlas = ExtResource("8_njfhj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xb8oe"]
atlas = ExtResource("8_njfhj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_to3br"]
atlas = ExtResource("8_njfhj")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxajn"]
atlas = ExtResource("8_njfhj")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtk2n"]
atlas = ExtResource("9_k3qw0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s4f4"]
atlas = ExtResource("9_k3qw0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnypl"]
atlas = ExtResource("10_5c87x")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pghy"]
atlas = ExtResource("11_y6knk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_piyu3"]
atlas = ExtResource("11_y6knk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdha2"]
atlas = ExtResource("12_3sl4j")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s28k6"]
atlas = ExtResource("12_3sl4j")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1hkx"]
atlas = ExtResource("12_3sl4j")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1xmv"]
atlas = ExtResource("12_3sl4j")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjhdd"]
atlas = ExtResource("12_3sl4j")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sh1oo"]
atlas = ExtResource("12_3sl4j")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqomd"]
atlas = ExtResource("13_c1jwc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3c5w"]
atlas = ExtResource("13_c1jwc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m70kn"]
atlas = ExtResource("13_c1jwc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7xry"]
atlas = ExtResource("14_rilo2")
region = Rect2(1, 0, 31, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_l22ww"]
atlas = ExtResource("14_rilo2")
region = Rect2(32, 0, 31, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7vwq"]
atlas = ExtResource("14_rilo2")
region = Rect2(63, 0, 31, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlmu0"]
atlas = ExtResource("14_rilo2")
region = Rect2(94, 0, 31, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xn75"]
atlas = ExtResource("15_7esle")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8h64v"]
atlas = ExtResource("15_7esle")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rctl"]
atlas = ExtResource("15_7esle")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_umcxf"]
atlas = ExtResource("15_7esle")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp34o"]
atlas = ExtResource("15_7esle")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyime"]
atlas = ExtResource("15_7esle")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwtn2"]
atlas = ExtResource("16_76hmv")
region = Rect2(0, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwv2q"]
atlas = ExtResource("16_76hmv")
region = Rect2(32, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qxbn"]
atlas = ExtResource("16_76hmv")
region = Rect2(64, 0, 32, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_vg3q4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_euce1")
}],
"loop": true,
"name": &"Cling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5qkt")
}],
"loop": true,
"name": &"Dashing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjd3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcwdh")
}],
"loop": true,
"name": &"DashingAnticipation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5hpc")
}],
"loop": true,
"name": &"Falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyasq")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_tuuwy")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_xb8oe")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_to3br")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_mxajn")
}],
"loop": true,
"name": &"Idle",
"speed": 6.0
}, {
"frames": [{
"duration": 0.2,
"texture": SubResource("AtlasTexture_dtk2n")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_5s4f4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnypl")
}],
"loop": false,
"name": &"Jump",
"speed": 6.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_4pghy")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_piyu3")
}],
"loop": false,
"name": &"Landing",
"speed": 6.0
}, {
"frames": [{
"duration": 0.6,
"texture": SubResource("AtlasTexture_rdha2")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_s28k6")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_j1hkx")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_u1xmv")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_kjhdd")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_sh1oo")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqomd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3c5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m70kn")
}],
"loop": true,
"name": &"Skidding",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7xry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l22ww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7vwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlmu0")
}],
"loop": true,
"name": &"Sliding",
"speed": 5.0
}, {
"frames": [{
"duration": 0.7,
"texture": SubResource("AtlasTexture_1xn75")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_8h64v")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_4rctl")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_umcxf")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_cp34o")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_uyime")
}],
"loop": true,
"name": &"Walk",
"speed": 6.0
}, {
"frames": [{
"duration": 0.1,
"texture": SubResource("AtlasTexture_xwtn2")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_fwv2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qxbn")
}],
"loop": false,
"name": &"Wall Jump",
"speed": 6.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_5o1wf"]
streams_count = 2
stream_0/stream = ExtResource("19_yklgd")
stream_0/weight = 1.0
stream_1/stream = ExtResource("20_dgphi")
stream_1/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_52uk5"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("21_3ncd7")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_wdyio"]
streams_count = 2
stream_0/stream = ExtResource("24_ur4w1")
stream_0/weight = 1.0
stream_1/stream = ExtResource("24_82yp3")
stream_1/weight = 1.0

[node name="Saul" instance=ExtResource("1_regtg")]
collision_layer = 5
collision_mask = 5
platform_on_leave = 2
script = ExtResource("2_rhth6")

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ypg7h")

[node name="HurtBox" parent="." index="1"]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(19, 0)
shape = SubResource("CircleShape2D_jtpw0")

[node name="AttackSprite" type="Sprite2D" parent="HurtBox" index="1"]
visible = false
position = Vector2(18.5, 4.76837e-07)
scale = Vector2(1.3125, 1.25)
texture = ExtResource("3_hc6mq")

[node name="DashTrail" parent="." index="2" instance=ExtResource("4_6x0l7")]
width = 32.0
width_curve = SubResource("Curve_thmgi")
texture = ExtResource("5_6q34m")

[node name="DashTrail2" parent="." index="3" instance=ExtResource("6_l2rib")]

[node name="Detection" type="Node2D" parent="." index="4"]

[node name="Right" type="RayCast2D" parent="Detection" index="0"]
target_position = Vector2(15, 0)

[node name="Left" type="RayCast2D" parent="Detection" index="1"]
target_position = Vector2(-15, 0)

[node name="AudioListener2D" type="AudioListener2D" parent="." index="5"]
current = true

[node name="Sprite" type="AnimatedSprite2D" parent="." index="6"]
z_index = 1
sprite_frames = SubResource("SpriteFrames_vg3q4")
animation = &"Idle"
autoplay = "Idle"

[node name="DebugVarsVisualizer" parent="." index="7" instance=ExtResource("17_q1cbf")]
offset_left = 13.0
offset_top = -14.0
offset_right = 21.0
offset_bottom = -6.0

[node name="DustTrail" parent="." index="8" instance=ExtResource("18_2oby4")]
visible = false
position = Vector2(0, 15)
amount = 30

[node name="CoyoteTimer" type="Timer" parent="Timers" index="0"]
wait_time = 0.24
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="Timers" index="1"]
wait_time = 0.2
one_shot = true

[node name="DashTimer" type="Timer" parent="Timers" index="2"]
wait_time = 0.26
one_shot = true

[node name="DashCooldown" type="Timer" parent="Timers" index="3"]
wait_time = 0.3
one_shot = true

[node name="SlideDelay" type="Timer" parent="Timers" index="4"]
wait_time = 0.2
one_shot = true

[node name="SlideCancelTimer" type="Timer" parent="Timers" index="5"]
wait_time = 0.1
one_shot = true

[node name="ClingTime" type="Timer" parent="Timers" index="6"]
wait_time = 0.5
one_shot = true

[node name="Jump" type="AudioStreamPlayer" parent="Sounds" index="1"]
stream = SubResource("AudioStreamRandomizer_5o1wf")
volume_db = -6.0

[node name="Dash" type="AudioStreamPlayer" parent="Sounds" index="2"]
stream = SubResource("AudioStreamRandomizer_52uk5")
volume_db = -6.0

[node name="HitWall" type="AudioStreamPlayer" parent="Sounds" index="3"]
stream = ExtResource("22_tm1ie")
volume_db = -2.0
pitch_scale = 2.05

[node name="Attack" type="AudioStreamPlayer" parent="Sounds" index="4"]
stream = SubResource("AudioStreamRandomizer_wdyio")
volume_db = -2.0

[node name="Died" type="AudioStreamPlayer" parent="Sounds" index="5"]
stream = ExtResource("26_lxbau")
volume_db = 1.0
pitch_scale = 0.5
